changes key identifier from id to url for courses and id to title for topic, fixes see more issue on tablet with category list on courses page

--- a/src/components/CourseOptions/Display/styles.module.scss
+++ b/src/components/CourseOptions/Display/styles.module.scss
@@ -49,14 +49,12 @@ $breakpoints: (
     justify-content: center;
     padding: 0 1.6rem;
   }
-}
 
-
-@include media('<uppper-mid-phablet') {
   .see-more {
     display: inline-block;
     padding-top: 2.4rem;
     text-align: center;
+    grid-column: 1 / -1;
 
     &.show-more {
       display: none;
@@ -66,7 +64,6 @@ $breakpoints: (
     text-transform: capitalize;
   }
 }
-
 
 @include media('<lower-phone') {
   .flags {
