--- a/src/components/Videos/styles.module.scss
+++ b/src/components/Videos/styles.module.scss
@@ -63,7 +63,7 @@ $breakpoints: (
 
   text-align: center;
   cursor:pointer;
-  
+
   & iframe {
     width: 100%;
     margin-top: 0;
@@ -133,6 +133,7 @@ $breakpoints: (
 
 .arrow {
   fill: #ffffff;
+  margin-left: .5rem;
 }
 
 @include media('>desktop') {
